Working on makemore exercise2

--- a/makemore/makemore_exercise1.ipynb
+++ b/makemore/makemore_exercise1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "61d38e4f-14cc-4908-8aa4-7600ca6a63e0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "id": "ae899356-6c7d-4325-860c-61efc6596589",
    "metadata": {},
    "outputs": [],
@@ -45,24 +45,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 9,
    "id": "905ba3e5-e92a-42f2-b536-34cc5ec509e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'f': 6, 'g': 7, 'h': 8, 'i': 9, 'j': 10, 'k': 11, 'l': 12, 'm': 13, 'n': 14, 'o': 15, 'p': 16, 'q': 17, 'r': 18, 's': 19, 't': 20, 'u': 21, 'v': 22, 'w': 23, 'x': 24, 'y': 25, 'z': 26, '.': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "# Given tri-gram add another dimension\n",
     "N = torch.zeros((27, 27, 27), dtype=torch.int32)\n",
+    "# Create sorted characters\n",
     "chars = sorted(list(set(''.join(words))))\n",
+    "print(chars)\n",
     "# Character number: a : 1\n",
     "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
     "stoi['.'] = 0\n",
+    "print(stoi)\n",
     "# Number character: 1 : a\n",
     "itos = {i:s for s,i in stoi.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 11,
    "id": "0165a474-0ac2-4d54-a477-8bf74117cc09",
    "metadata": {},
    "outputs": [],
@@ -71,6 +83,7 @@
     "log_likehood = 0.0\n",
     "n = 0\n",
     "for w in words:\n",
+    "    # Splitting up characters\n",
     "    chs = ['.'] + list(w) + ['.']\n",
     "    for ch1, ch2, ch3 in zip(chs, chs[1:], chs[2:]):\n",
     "        ix1 = stoi[ch1]\n",
@@ -198,6 +211,11 @@
     "for w in words:\n",
     "    chs = ['.'] + list(w) + ['.']\n",
     "    for ch1, ch2, ch3 in zip(chs, chs[1:], chs[2:]):\n",
+    "        # zip(chs, chs[1:], chs[2:]) will produce:\n",
+    "        # ('.', 'c', 'a')\n",
+    "        # ('c', 'a', 't')\n",
+    "        # ('a', 't', '.')\n",
+    "        # Then find \n",
     "        ix1 = stoi[ch1]\n",
     "        ix2 = stoi[ch2]\n",
     "        ix3 = stoi[ch3]\n",
